@@ -1,5 +1,5 @@
 Package: sphet
-Version: 1.4-1
+Version: 1.4-2
 Date: 2013-10-10
 Title: Estimation of spatial autoregressive models with and without
         heteroskedastic innovations
